--- a/style.css
+++ b/style.css
@@ -2,18 +2,21 @@ body {
     font-family: 'Arial', sans-serif;
     background-image: linear-gradient(#0e1a26,#182531, #223544 );
     color: #fff;
+}
+
+.content{
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
-    height: 100vh;
-    margin: 0;
+    gap: 50px;
+    flex-wrap: wrap;
 }
 
 .card {
     background-color: #26455ec4;
     border-radius: 15px;
     box-shadow: 0 8px 30px rgba(0, 0, 0, 0.2);
-    width: 250px;
+    width: 300px;
     padding: 20px;
     overflow: hidden;
 }
